2008-05-04  Hans Breuer  <hans@breuer.org>

	* lib/geometry.[hc] lib/libdia.def: three_point_circle() calculate
	center point and radius given 3 points on a circle

	* plug-ins/xfig/xfig-import.c lib/create.h(create_standard_arc) : the 
	fifth parameter was named and treated as radius alsthough it set the
	"curve_distance"
	* lib/create.c(create_standard_arc) : also the second point passed in
	was simply ignored. Now it moves the second handle. Part of bug #436148
	
	* plug-ins/cairo/diacairo.c : more exporters marked as FILTER_DONT_GUESS
	Fixes writing of (old) WMF, but text is missing for both EMF and WMF.

	* samples/render-test.dia : fixed some alignments and colors

2008-05-03  Hans Breuer  <hans@breuer.org>

	* app/filedlg.c : adapt the "Supported Formats" filter so that the
	files shown are matching the extensions of the slected import filter.
	Fixes bug #503117

	* objects/UML/association.c : the transition to full StdProps broke
	the restoration of autorouting swicthed off in version 1 shapes
	* samples/Self/PyDiaObjects.dia : documentation of PyDia which
	showed the problem

	* plug-ins/xslt/xslt.c(xslt_ok) : the directory name passed into xslt
	needs to be an uri (*NIX being more tolerant). Fixes bug #472143.

	* samples/Self/dia-renderer.dia : updated one more

	* app/load_save.c : only update handle positions if the bounding box
	is empty after creation of the object

	* plug-ins/wmf/wmf.cpp : use Pango for loading the font but not for 
	rendering (taking the better part of my patch to fix bug #350726)
	* plug-ins/makefile.msc : link wmf with pangowin32.lib, clean-up

	* app/find-and-replace.c : reset last found if we start a new search

	* app/render_gdk.c(draw_pixel_rect, draw_pixel_line) : clip early to
	avoid passing out-of-range parameters to Gdk

2008-05-02  Hans Breuer  <hans@breuer.org>

	* objects/FS/flow-ortho.c objects/FS/flow-poly.c objects/FS/flow.c :
	objects/FS/flow.c : Object::copy() was not calling Object::update()