@@ -362,8 +362,8 @@ real line_to_point(real a, real b , real c, Point *p);
 void point_perp(Point *p, real a, real b, real c, Point *perp);
 void fillet(Point *p1, Point *p2, Point *p3, Point *p4,
 	    real r, Point *c, real *pa, real *aa);
-int  three_point_arc(const Point *p1, const Point *p2, const Point *p3,
-                     Point* center, real* radius);
+int  three_point_circle(const Point *p1, const Point *p2, const Point *p3,
+                        Point* center, real* radius);
 real point_cross(Point *p1, Point *p2);
 Point calculate_object_edge(Point *objmid, Point *end, DiaObject *obj);
 
